// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EdsButton Primary renders correctly 1`] = `
<jest>
  <button
    class="eds-button eds-button--primary"
    type="button"
  >
    Button label
  </button>
</jest>
`;

exports[`EdsButton Primary renders correctly disabled 1`] = `
<jest>
  <button
    class="eds-button eds-button--primary"
    disabled=""
    type="button"
  >
    Button label
  </button>
</jest>
`;

exports[`EdsButton Primary renders correctly with extra attributes 1`] = `
<jest>
  <button
    class="eds-button eds-button--primary"
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    type="button"
  >
    Button label
  </button>
</jest>
`;

exports[`EdsButton Primary renders correctly with extra class names 1`] = `
<jest>
  <button
    class="eds-button eds-button--primary custom-class custom-class--test"
    type="button"
  >
    Button label
  </button>
</jest>
`;

exports[`EdsButton Secondary renders correctly 1`] = `
<jest>
  <button
    class="eds-button eds-button--secondary"
    type="button"
  >
    Button label
  </button>
</jest>
`;

exports[`EdsButton Tertiary renders correctly 1`] = `
<jest>
  <button
    class="eds-button eds-button--tertiary"
    type="button"
  >
    Button label
  </button>
</jest>
`;
